[gd_scene load_steps=2 format=3 uid="uid://j7oawcod7yc6"]

[ext_resource type="Script" path="res://mainMenuScript.gd" id="1_jbs4n"]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jbs4n")

[node name="vButton" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -68.0
offset_right = 35.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="startButton" type="Button" parent="vButton"]
layout_mode = 2
text = "Start"

[node name="creditsButton" type="Button" parent="vButton"]
layout_mode = 2
text = "Credits"

[node name="quitButton" type="Button" parent="vButton"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="vButton/startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="vButton/creditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="vButton/quitButton" to="." method="_on_quit_button_pressed"]
